src/components/navbar_analytics/navbar_analytics.css
/* Keyframes for animations */
@keyframes bounceExpand {
  0% {
    width: 5%;
  }
  100% {
    width: 20%;
  }
}

@keyframes bounceCollapse {
  0% {
    width: 20%;
  }
  100% {
    width: 5%;
  }
}

/* Sidebar container styles */
.sidebar-container {
  position: relative;
  width: 5%;
  background-color: #faf7f0;
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow: hidden;
  transition: width 0.5s ease;
}

.sidebar-container.collapsed {
  width: 5%;
  animation: bounceCollapse 0.3s ease forwards;
}

.sidebar-container.expanded {
  width: 20%;
  animation: bounceExpand 0.3s ease forwards;
}

/* Logo container styles */
.logo-container {
  display: flex;
  justify-content: left;
  align-items: center;
  height: 64px;
  margin-bottom: 0;
  margin-top: 40px;
  overflow: hidden;
  position: relative;
  width: 100%;
  transform: translateX(-25px);
}

.logo {
  width: 121px;
  height: 35px;
  transition: width 0.3s ease;
  position: absolute;
  left: 55px;
}


.border-nav {
  border-top: 1px solid #e0e0e0;
  border-bottom: 1px solid #e0e0e0;
  width: 90%;
  margin: 10px auto;
}

/* Menu styles */
.sidebar .menu {
  padding: 20px 0;
  margin: 0;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 10px;
  transform: translateX(10px);
  flex-grow: 1; 
}

.sidebar .menu-item {
  padding: 0 20px;
  display: flex;
  align-items: center;
}

.sidebar .menu-link {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: black;
  font-weight: bold;
  transition: all 0.3s ease;
}

.sidebar .menu-bottom {
  padding: 10px 0;
  margin: 0;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 10px;
  position: absolute; 
  bottom: 0; 
  width: 100%;
  transform: translateX(10px);  
}

.sidebar .menu-bottom .menu-item {
  padding: 0 20px;
  display: flex;
  align-items: center;

}

.sidebar .menu-bottom .menu-link {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: black;
  font-weight: bold;
  transition: all 0.3s ease;
}


.menu-icon {
  font-size: 24px;
  margin-right: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 24px;
  height: 24px;
}


.menu-text {
  transition: opacity 0.3s ease, transform 0.3s ease;
  opacity: 1; 
  margin-left: 5px; 
}


.sidebar-container.expanded .menu-text {
  opacity: 1; 
  transform: translateX(0); 
}

.sidebar-container.collapsed .menu-text {
  opacity: 0; 
  transform: translateX(-20px);
}


.sidebar-container.collapsed .menu-icon {
  opacity: 1; 
}

